cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_VERBOSE_MAKEFILE ON)

add_compile_options(-Wall)
add_compile_options(-Wpedantic)
add_compile_options(-fsanitize=address)
add_link_options(-fsanitize=address)

add_executable(0001 0001.cpp)
add_executable(0002 0002.cpp)
add_executable(0003 0003.cpp)
add_executable(0004 0004.cpp)
add_executable(0005 0005.cpp)
add_executable(0006 0006.cpp)
add_executable(0007 0007.cpp)
add_executable(0008 0008.cpp)
add_executable(0009 0009.cpp)
add_executable(0012 0012.cpp)
add_executable(0013 0013.cpp)
add_executable(0014 0014.cpp)
add_executable(0018 0018.cpp)
add_executable(0020 0020.cpp)
add_executable(0021 0021.cpp)
add_executable(0023 0023.cpp)
add_executable(0026 0026.cpp)
add_executable(0027 0027.cpp)
add_executable(0028 0028.cpp)
add_executable(0032 0032.cpp)
add_executable(0033 0033.cpp)
add_executable(0035 0035.cpp)
add_executable(0049 0049.cpp)
add_executable(0053 0053.cpp)
add_executable(0056 0056.cpp)
add_executable(0062 0062.cpp)
add_executable(0067 0067.cpp)
add_executable(0070 0070.cpp)
add_executable(0074 0074.cpp)
add_executable(0080 0080.cpp)
add_executable(0081 0081.cpp)
add_executable(0088 0088.cpp)
add_executable(0121 0121.cpp)
add_executable(0131 0131.cpp)
add_executable(0133 0133.cpp)
add_executable(0136 0136.cpp)
add_executable(0141 0141.cpp)
add_executable(0153 0153.cpp)
add_executable(0165 0165.cpp)
add_executable(0169 0169.cpp)
add_executable(0189 0189.cpp)
add_executable(0200 0200.cpp)
add_executable(0206 0206.cpp)
add_executable(0211 0211.cpp)
add_executable(0226 0226.cpp)
add_executable(0242 0242.cpp)
add_executable(0273 0273.cpp)
add_executable(0278 0278.cpp)
#add_executable(0301 0301.cpp)
add_executable(0347 0347.cpp)
add_executable(0374 0374.cpp)
add_executable(0382 0382.cpp)
add_executable(0389 0389.cpp)
add_executable(0438 0438.cpp)
add_executable(0452 0452.cpp)
add_executable(0509 0509.cpp)
add_executable(0520 0520.cpp)
add_executable(0658 0658.cpp)
add_executable(0692 0692.cpp)
add_executable(0701 0701.cpp)
add_executable(0704 0704.cpp)
add_executable(0941 0941.cpp)
add_executable(0977 0977.cpp)
add_executable(0997 0997.cpp)
add_executable(1000 1000.cpp)  # TOO SLOW! DOES NOT WORK!
add_executable(1009 1009.cpp)
add_executable(1010 1010.cpp)
add_executable(1022 1022.cpp)
add_executable(1041 1041.cpp)
add_executable(1094 1094.cpp)
add_executable(1114 1114.cpp)
add_executable(1137 1137.cpp)
add_executable(1345 1345.cpp)
add_executable(1463 1463.cpp)
add_executable(1672 1672.cpp)
add_executable(1920 1920.cpp)
add_executable(2129 2129.cpp)
